# Job-search_with_DB_connection

./: README.md  main.py  pyproject.toml
src/: API_HH.py  create_DB.py  create_and_word_with_DB.py  db_operations.py  user_interface.py
tests/: test_API_HH.py  test_create_DB.py
